--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "~9.1.11",
     "@angular/forms": "~9.1.11",
     "@angular/http": "^7.2.16",
+    "@angular/localize": "^9.1.12",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
